--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <title>EngVoca - 영어단어 학습</title>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=DM+Serif+Display&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
 <style>
-:root{--bg:#0f1117;--surface:#1a1d27;--surface2:#232736;--accent:#6c5ce7;--accent-light:#a29bfe;--green:#00b894;--red:#e17055;--text:#f0f0f0;--text-dim:#8892a4;--card-radius:20px}
+:root{--bg:#f5f7fb;--surface:#ffffff;--surface2:#eef1f6;--accent:#5b6abf;--accent-light:#7c8ad9;--green:#2eaa7f;--red:#d9534f;--text:#2c2c3a;--text-dim:#7a8194;--card-radius:20px;--shadow:0 2px 12px rgba(0,0,0,.06)}
 *{margin:0;padding:0;box-sizing:border-box}
 body{font-family:'Noto Sans KR',sans-serif;background:var(--bg);color:var(--text);min-height:100vh;overflow-x:hidden}
-body::before{content:'';position:fixed;top:-30%;left:-10%;width:60vw;height:60vw;background:radial-gradient(circle,rgba(108,92,231,.08) 0%,transparent 70%);pointer-events:none;z-index:0}
-body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:50vw;background:radial-gradient(circle,rgba(0,184,148,.06) 0%,transparent 70%);pointer-events:none;z-index:0}
+body::before{content:'';position:fixed;top:-30%;left:-10%;width:60vw;height:60vw;background:radial-gradient(circle,rgba(91,106,191,.07) 0%,transparent 70%);pointer-events:none;z-index:0}
+body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:50vw;background:radial-gradient(circle,rgba(46,170,127,.05) 0%,transparent 70%);pointer-events:none;z-index:0}
 .app{position:relative;z-index:1;max-width:520px;margin:0 auto;padding:20px 16px 40px}
 
 .header{text-align:center;padding:24px 0 20px}
-.header h1{font-family:'DM Serif Display',serif;font-size:2rem;letter-spacing:2px;background:linear-gradient(135deg,var(--accent-light),var(--green));-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.header h1{font-family:'DM Serif Display',serif;font-size:2rem;letter-spacing:2px;background:linear-gradient(135deg,var(--accent),var(--green));-webkit-background-clip:text;-webkit-text-fill-color:transparent}
 .header p{color:var(--text-dim);font-size:.85rem;margin-top:4px}
 
 /* Loading */
@@ -26,21 +26,21 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .day-selector{margin-bottom:16px}
 .day-tabs{display:flex;gap:6px;overflow-x:auto;padding:4px 0;scrollbar-width:none}
 .day-tabs::-webkit-scrollbar{display:none}
-.day-tab{flex-shrink:0;padding:10px 18px;border:1px solid rgba(255,255,255,.08);border-radius:12px;background:var(--surface);color:var(--text-dim);font-family:'Noto Sans KR',sans-serif;font-size:.82rem;font-weight:500;cursor:pointer;transition:all .25s;white-space:nowrap}
+.day-tab{flex-shrink:0;padding:10px 18px;border:1px solid rgba(0,0,0,.08);border-radius:12px;background:var(--surface);color:var(--text-dim);font-family:'Noto Sans KR',sans-serif;font-size:.82rem;font-weight:500;cursor:pointer;transition:all .25s;white-space:nowrap;box-shadow:var(--shadow)}
 .day-tab:hover{border-color:var(--accent);color:var(--text)}
-.day-tab.active{background:var(--accent);color:#fff;border-color:var(--accent);box-shadow:0 3px 12px rgba(108,92,231,.35)}
+.day-tab.active{background:var(--accent);color:#fff;border-color:var(--accent);box-shadow:0 3px 12px rgba(91,106,191,.3)}
 .day-title{text-align:center;font-size:.8rem;color:var(--text-dim);margin-top:8px;min-height:1.2em}
 .day-count{text-align:center;font-size:.72rem;color:var(--text-dim);margin-top:4px}
 
 .stats-bar{display:flex;gap:8px;margin-bottom:16px}
-.stat-item{flex:1;background:var(--surface);border-radius:14px;padding:14px 10px;text-align:center;border:1px solid rgba(255,255,255,.04)}
+.stat-item{flex:1;background:var(--surface);border-radius:14px;padding:14px 10px;text-align:center;border:1px solid rgba(0,0,0,.06);box-shadow:var(--shadow)}
 .stat-value{font-family:'JetBrains Mono',monospace;font-size:1.4rem;font-weight:600}
 .stat-value.green{color:var(--green)}.stat-value.red{color:var(--red)}.stat-value.accent{color:var(--accent-light)}
 .stat-label{font-size:.7rem;color:var(--text-dim);margin-top:2px}
 
-.mode-tabs{display:flex;gap:6px;margin-bottom:16px;background:var(--surface);border-radius:14px;padding:5px}
+.mode-tabs{display:flex;gap:6px;margin-bottom:16px;background:var(--surface2);border-radius:14px;padding:5px}
 .mode-tab{flex:1;padding:12px;border:none;border-radius:10px;background:transparent;color:var(--text-dim);font-family:'Noto Sans KR',sans-serif;font-size:.9rem;font-weight:500;cursor:pointer;transition:all .3s}
-.mode-tab.active{background:var(--accent);color:#fff;box-shadow:0 4px 15px rgba(108,92,231,.4)}
+.mode-tab.active{background:var(--accent);color:#fff;box-shadow:0 4px 15px rgba(91,106,191,.3)}
 .mode-tab:hover:not(.active){color:var(--text)}
 
 .progress-wrap{margin-bottom:20px}
@@ -52,9 +52,9 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .flashcard-area{perspective:1000px;margin-bottom:20px}
 .flashcard{position:relative;width:100%;min-height:280px;cursor:pointer;transform-style:preserve-3d;transition:transform .6s cubic-bezier(.4,0,.2,1)}
 .flashcard.flipped{transform:rotateY(180deg)}
-.card-face{position:absolute;inset:0;backface-visibility:hidden;border-radius:var(--card-radius);display:flex;flex-direction:column;align-items:center;justify-content:center;padding:32px 28px;border:1px solid rgba(255,255,255,.06)}
-.card-front{background:linear-gradient(145deg,var(--surface),var(--surface2))}
-.card-back{background:linear-gradient(145deg,#1e2235,#252a40);transform:rotateY(180deg)}
+.card-face{position:absolute;inset:0;backface-visibility:hidden;border-radius:var(--card-radius);display:flex;flex-direction:column;align-items:center;justify-content:center;padding:32px 28px;border:1px solid rgba(0,0,0,.06);box-shadow:var(--shadow)}
+.card-front{background:linear-gradient(145deg,#ffffff,#f0f3f8)}
+.card-back{background:linear-gradient(145deg,#f8f9fd,#eef1f8);transform:rotateY(180deg)}
 .card-word{font-family:'DM Serif Display',serif;font-size:2.6rem;letter-spacing:1px;margin-bottom:16px}
 .card-hint{font-size:.8rem;color:var(--text-dim);display:flex;align-items:center;gap:6px}
 .card-hint svg{width:16px;height:16px}
@@ -66,27 +66,27 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 
 .card-nav{display:flex;gap:10px;margin-bottom:20px}
 .card-nav button{flex:1;padding:14px;border:none;border-radius:14px;font-family:'Noto Sans KR',sans-serif;font-size:.9rem;font-weight:500;cursor:pointer;transition:all .2s}
-.btn-know{background:rgba(0,184,148,.15);color:var(--green);border:1px solid rgba(0,184,148,.3)!important}
-.btn-know:hover{background:rgba(0,184,148,.25)}
-.btn-dont{background:rgba(225,112,85,.15);color:var(--red);border:1px solid rgba(225,112,85,.3)!important}
-.btn-dont:hover{background:rgba(225,112,85,.25)}
-.btn-next{background:var(--surface2);color:var(--text);border:1px solid rgba(255,255,255,.06)!important}
-.btn-next:hover{background:var(--surface)}
+.btn-know{background:rgba(46,170,127,.1);color:var(--green);border:1px solid rgba(46,170,127,.3)!important}
+.btn-know:hover{background:rgba(46,170,127,.2)}
+.btn-dont{background:rgba(217,83,79,.1);color:var(--red);border:1px solid rgba(217,83,79,.3)!important}
+.btn-dont:hover{background:rgba(217,83,79,.2)}
+.btn-next{background:var(--surface2);color:var(--text);border:1px solid rgba(0,0,0,.06)!important}
+.btn-next:hover{background:#e4e8f0}
 
 /* Quiz */
 .quiz-area{display:none}
-.quiz-question{background:linear-gradient(145deg,var(--surface),var(--surface2));border-radius:var(--card-radius);padding:40px 28px;text-align:center;margin-bottom:16px;border:1px solid rgba(255,255,255,.06)}
+.quiz-question{background:linear-gradient(145deg,#ffffff,#f0f3f8);border-radius:var(--card-radius);padding:40px 28px;text-align:center;margin-bottom:16px;border:1px solid rgba(0,0,0,.06);box-shadow:var(--shadow)}
 .quiz-word{font-family:'DM Serif Display',serif;font-size:2.4rem;margin-bottom:8px}
 .quiz-pos{color:var(--accent-light);font-size:.85rem}
 .quiz-options{display:flex;flex-direction:column;gap:10px;margin-bottom:20px}
-.quiz-option{padding:16px 20px;background:var(--surface);border:2px solid rgba(255,255,255,.06);border-radius:14px;color:var(--text);font-family:'Noto Sans KR',sans-serif;font-size:.95rem;text-align:left;cursor:pointer;transition:all .2s}
-.quiz-option:hover:not(.disabled){border-color:var(--accent);background:var(--surface2)}
-.quiz-option.correct{border-color:var(--green)!important;background:rgba(0,184,148,.12)!important;color:var(--green)}
-.quiz-option.wrong{border-color:var(--red)!important;background:rgba(225,112,85,.12)!important;color:var(--red)}
+.quiz-option{padding:16px 20px;background:var(--surface);border:2px solid rgba(0,0,0,.06);border-radius:14px;color:var(--text);font-family:'Noto Sans KR',sans-serif;font-size:.95rem;text-align:left;cursor:pointer;transition:all .2s;box-shadow:var(--shadow)}
+.quiz-option:hover:not(.disabled){border-color:var(--accent);background:#f0f2ff}
+.quiz-option.correct{border-color:var(--green)!important;background:rgba(46,170,127,.1)!important;color:var(--green)}
+.quiz-option.wrong{border-color:var(--red)!important;background:rgba(217,83,79,.1)!important;color:var(--red)}
 .quiz-option.disabled{pointer-events:none}
 .quiz-next-wrap{text-align:center;display:none}
 .quiz-next-btn{padding:14px 40px;background:var(--accent);color:#fff;border:none;border-radius:14px;font-family:'Noto Sans KR',sans-serif;font-size:.95rem;font-weight:500;cursor:pointer;transition:all .2s}
-.quiz-next-btn:hover{box-shadow:0 4px 20px rgba(108,92,231,.5)}
+.quiz-next-btn:hover{box-shadow:0 4px 20px rgba(91,106,191,.3)}
 
 /* Result */
 .result-screen{display:none;text-align:center;padding:40px 20px}
@@ -94,26 +94,26 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .result-title{font-family:'DM Serif Display',serif;font-size:1.8rem;margin-bottom:8px}
 .result-desc{color:var(--text-dim);margin-bottom:24px;font-size:.95rem}
 .result-stats{display:flex;gap:16px;justify-content:center;margin-bottom:32px}
-.result-stat-box{background:var(--surface);border-radius:16px;padding:20px 28px;border:1px solid rgba(255,255,255,.04)}
+.result-stat-box{background:var(--surface);border-radius:16px;padding:20px 28px;border:1px solid rgba(0,0,0,.06);box-shadow:var(--shadow)}
 .result-stat-num{font-family:'JetBrains Mono',monospace;font-size:2rem;font-weight:600}
 .result-stat-label{font-size:.75rem;color:var(--text-dim);margin-top:4px}
 .btn-restart{padding:14px 48px;background:var(--accent);color:#fff;border:none;border-radius:14px;font-family:'Noto Sans KR',sans-serif;font-size:1rem;font-weight:500;cursor:pointer;transition:all .2s}
-.btn-restart:hover{box-shadow:0 4px 20px rgba(108,92,231,.5)}
+.btn-restart:hover{box-shadow:0 4px 20px rgba(91,106,191,.3)}
 
 /* Settings */
-.settings-toggle{position:fixed;top:16px;right:16px;z-index:100;width:40px;height:40px;border-radius:12px;background:var(--surface);border:1px solid rgba(255,255,255,.06);color:var(--text-dim);cursor:pointer;display:flex;align-items:center;justify-content:center;transition:all .2s}
+.settings-toggle{position:fixed;top:16px;right:16px;z-index:100;width:40px;height:40px;border-radius:12px;background:var(--surface);border:1px solid rgba(0,0,0,.06);color:var(--text-dim);cursor:pointer;display:flex;align-items:center;justify-content:center;transition:all .2s;box-shadow:var(--shadow)}
 .settings-toggle:hover{color:var(--text);background:var(--surface2)}
 .settings-toggle svg{width:20px;height:20px}
-.settings-panel{display:none;position:fixed;inset:0;z-index:200;background:rgba(0,0,0,.6);backdrop-filter:blur(8px);padding:20px;overflow-y:auto}
+.settings-panel{display:none;position:fixed;inset:0;z-index:200;background:rgba(0,0,0,.3);backdrop-filter:blur(8px);padding:20px;overflow-y:auto}
 .settings-panel.open{display:flex;align-items:center;justify-content:center}
-.settings-content{background:var(--surface);border-radius:var(--card-radius);padding:32px 24px;width:100%;max-width:460px;border:1px solid rgba(255,255,255,.08)}
+.settings-content{background:var(--surface);border-radius:var(--card-radius);padding:32px 24px;width:100%;max-width:460px;border:1px solid rgba(0,0,0,.08);box-shadow:0 8px 40px rgba(0,0,0,.12)}
 .settings-title{font-size:1.2rem;font-weight:700;margin-bottom:20px}
-.setting-row{display:flex;align-items:center;justify-content:space-between;padding:14px 0;border-bottom:1px solid rgba(255,255,255,.04)}
+.setting-row{display:flex;align-items:center;justify-content:space-between;padding:14px 0;border-bottom:1px solid rgba(0,0,0,.06)}
 .setting-label{font-size:.9rem}
 .setting-label span{display:block;font-size:.75rem;color:var(--text-dim);margin-top:2px}
-.setting-select{background:var(--surface2);border:1px solid rgba(255,255,255,.08);border-radius:10px;padding:8px 14px;color:var(--text);font-family:'Noto Sans KR',sans-serif;font-size:.85rem}
+.setting-select{background:var(--surface2);border:1px solid rgba(0,0,0,.08);border-radius:10px;padding:8px 14px;color:var(--text);font-family:'Noto Sans KR',sans-serif;font-size:.85rem}
 .btn-close-settings{margin-top:20px;width:100%;padding:12px;background:var(--accent);color:#fff;border:none;border-radius:12px;font-family:'Noto Sans KR',sans-serif;font-size:.9rem;cursor:pointer}
-.btn-reload{margin-top:10px;width:100%;padding:12px;background:var(--surface2);color:var(--text);border:1px solid rgba(255,255,255,.08);border-radius:12px;font-family:'Noto Sans KR',sans-serif;font-size:.85rem;cursor:pointer;transition:all .2s}
+.btn-reload{margin-top:10px;width:100%;padding:12px;background:var(--surface2);color:var(--text);border:1px solid rgba(0,0,0,.08);border-radius:12px;font-family:'Noto Sans KR',sans-serif;font-size:.85rem;cursor:pointer;transition:all .2s}
 .btn-reload:hover{background:var(--accent);color:#fff;border-color:var(--accent)}
 
 @keyframes fadeUp{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
@@ -241,6 +241,11 @@ let wrong = 0;
 let mode = 'flash';
 let isFlipped = false;
 
+// ── 내장 기본 데이터 (day 폴더 접근 불가 시 fallback) ──
+const embeddedDays = [
+  {"day":1,"title":"pro-/pre-, in-, out-/ut-/il-","words":[{"en":"progress","meanings":[{"pos":"명","defs":["진보, 발전"]},{"pos":"동","defs":["전진하다, 발달하다"]}]},{"en":"propose","meanings":[{"pos":"동","defs":["제안하다","(결혼을) 신청하다"]}]},{"en":"produce","meanings":[{"pos":"동","defs":["생산하다"]},{"pos":"명","defs":["농산물"]}]},{"en":"protect","meanings":[{"pos":"동","defs":["보호하다, 지키다"]}]},{"en":"profile","meanings":[{"pos":"명","defs":["옆얼굴, 개요, 인물 소개(프로필)"]}]},{"en":"purchase","meanings":[{"pos":"동","defs":["구매하다"]},{"pos":"명","defs":["구매품, 구입"]}]},{"en":"predict","meanings":[{"pos":"동","defs":["예측하다, 예언하다"]}]},{"en":"precaution","meanings":[{"pos":"명","defs":["예방 조치, 조심, 경계"]}]},{"en":"premature","meanings":[{"pos":"형","defs":["시기상조의, 조숙한, 조산의"]}]},{"en":"preview","meanings":[{"pos":"명","defs":["시사(회), 미리 보기"]},{"pos":"동","defs":["(영화 등을) 미리 보다"]}]},{"en":"income","meanings":[{"pos":"명","defs":["수입, 소득"]}]},{"en":"intake","meanings":[{"pos":"명","defs":["섭취(량), 흡입"]}]},{"en":"infection","meanings":[{"pos":"명","defs":["감염, 전염, 전염병"]}]},{"en":"insight","meanings":[{"pos":"명","defs":["통찰력, 식견"]}]},{"en":"inherent","meanings":[{"pos":"형","defs":["타고난, 내재된, 고유의"]}]},{"en":"investment","meanings":[{"pos":"명","defs":["투자, 투자금"]}]},{"en":"investigate","meanings":[{"pos":"동","defs":["조사하다, 수사하다"]}]},{"en":"illustrate","meanings":[{"pos":"동","defs":["(실례·그림으로) 설명하다, 삽화를 넣다"]}]},{"en":"outcome","meanings":[{"pos":"명","defs":["결과, 성과"]}]},{"en":"outline","meanings":[{"pos":"명","defs":["개요, 윤곽"]},{"pos":"동","defs":["개요를 서술하다, 윤곽을 그리다"]}]},{"en":"outstanding","meanings":[{"pos":"형","defs":["뛰어난, 아주 훌륭한","(부채 등이) 미지불된"]}]},{"en":"outbreak","meanings":[{"pos":"명","defs":["(전쟁·질병 등의) 발생, 발발"]}]},{"en":"outlet","meanings":[{"pos":"명","defs":["배출구, (가전) 콘센트, 할인점(아울렛)"]}]},{"en":"utter","meanings":[{"pos":"형","defs":["완전한, 순전한"]},{"pos":"동","defs":["(말을) 내뱉다, 발언하다"]}]},{"en":"utmost","meanings":[{"pos":"형","defs":["최고의, 극도의"]},{"pos":"명","defs":["최대한도"]}]}]}
+];
+
 // ── Day 파일 자동 로드 ──
 async function loadAllDays() {
   document.getElementById('loadingScreen').style.display = 'block';
@@ -265,10 +270,9 @@ async function loadAllDays() {
     }
   }
 
+  // fetch 실패 시 내장 데이터 사용
   if (dayData.length === 0) {
-    document.getElementById('loadingScreen').innerHTML =
-      '<div style="color:var(--red);font-size:1rem">❌ day/day1.json 파일을 찾을 수 없습니다.<br><br><span style="font-size:.85rem;color:var(--text-dim)">day/ 폴더에 day1.json 파일이 있는지 확인하세요.</span></div>';
-    return;
+    dayData = embeddedDays;
   }
 
   allWords = [];
