--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 
 .header{text-align:center;padding:24px 0 20px}
 .header h1{font-family:'DM Serif Display',serif;font-size:2rem;letter-spacing:2px;background:linear-gradient(135deg,var(--accent),var(--green));-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.header h1 span{font-family:'DM Serif Display',serif;font-size:1.4rem}
 .header p{color:var(--text-dim);font-size:.85rem;margin-top:4px}
 
 .loading{text-align:center;padding:60px 20px;color:var(--text-dim)}
@@ -32,10 +33,8 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 /* ── 학습 화면 ── */
 .study-screen{display:none}
 
-.study-header{display:flex;align-items:center;gap:10px;margin-bottom:12px}
-.btn-back{padding:8px 14px;border:1px solid rgba(0,0,0,.08);border-radius:10px;background:var(--surface);color:var(--text-dim);font-family:'Noto Sans KR',sans-serif;font-size:.82rem;font-weight:500;cursor:pointer;transition:all .2s;box-shadow:var(--shadow);white-space:nowrap}
+.btn-back{position:fixed;top:16px;left:16px;z-index:100;padding:8px 14px;border:1px solid rgba(0,0,0,.06);border-radius:12px;background:var(--surface);color:var(--text-dim);font-family:'Noto Sans KR',sans-serif;font-size:.82rem;font-weight:500;cursor:pointer;transition:all .2s;box-shadow:var(--shadow);white-space:nowrap;display:none}
 .btn-back:hover{background:var(--accent);color:#fff;border-color:var(--accent)}
-.study-day-label{font-size:1rem;font-weight:700;color:var(--accent)}
 
 .day-title{text-align:left;font-size:.84rem;color:var(--accent);font-weight:500;margin-bottom:16px;padding:10px 16px;background:rgba(91,106,191,.06);border-radius:10px;line-height:1.5}
 .day-title-grid{display:grid;grid-template-columns:1fr 1fr;gap:4px 16px}
@@ -53,11 +52,9 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .card-word{font-family:'DM Serif Display',serif;font-size:2.6rem;letter-spacing:1px;text-align:center;margin-bottom:6px}
 .card-ipa{font-size:.95rem;color:var(--text-dim);text-align:center;margin-bottom:20px;font-family:'Noto Sans',sans-serif}
 .card-meanings{width:100%}
-.meaning-group{width:100%;margin-bottom:14px}.meaning-group:last-child{margin-bottom:0}
-.pos-tag{display:inline-block;background:var(--accent);color:#fff;font-size:.7rem;font-weight:700;padding:3px 10px;border-radius:20px;margin-bottom:6px}
-.def-list{list-style:none}
-.def-list li{font-size:1rem;line-height:1.6;color:var(--text);padding-left:16px;position:relative}
-.def-list li::before{content:'';position:absolute;left:0;top:10px;width:6px;height:6px;border-radius:50%;background:var(--accent-light)}
+.meaning-group{width:100%;margin-bottom:10px;display:flex;align-items:baseline;gap:8px;flex-wrap:wrap}.meaning-group:last-child{margin-bottom:0}
+.pos-tag{display:inline-block;background:var(--accent);color:#fff;font-size:.7rem;font-weight:700;padding:3px 10px;border-radius:20px;flex-shrink:0}
+.def-inline{font-size:1rem;line-height:1.6;color:var(--text)}
 
 /* Navigation */
 .card-nav{display:flex;gap:8px;margin-bottom:12px}
@@ -89,6 +86,8 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 </style>
 </head>
 <body>
+
+<button class="btn-back" id="btnBack" onclick="goBackToSelect()">← 돌아가기</button>
 
 <button class="settings-toggle" onclick="toggleSettings()">
   <svg fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M12 15a3 3 0 100-6 3 3 0 000 6z"/><path d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 01-2.83 2.83l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-4 0v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 01-2.83-2.83l.06-.06A1.65 1.65 0 004.68 15a1.65 1.65 0 00-1.51-1H3a2 2 0 010-4h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 012.83-2.83l.06.06A1.65 1.65 0 009 4.68a1.65 1.65 0 001-1.51V3a2 2 0 014 0v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 012.83 2.83l-.06.06A1.65 1.65 0 0019.4 9a1.65 1.65 0 001.51 1H21a2 2 0 010 4h-.09a1.65 1.65 0 00-1.51 1z"/></svg>
@@ -127,7 +126,7 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 
 <div class="app">
   <div class="header fade-up">
-    <h1>EngVoca</h1>
+    <h1>EngVoca<span id="headerDayLabel"></span></h1>
     <p>영어단어 학습 프로그램</p>
   </div>
 
@@ -144,11 +143,6 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 
   <!-- 학습 화면 -->
   <div class="study-screen" id="studyScreen">
-    <div class="study-header fade-up">
-      <button class="btn-back" onclick="goBackToSelect()">← 돌아가기</button>
-      <div class="study-day-label" id="studyDayLabel">Day 1</div>
-    </div>
-
     <div class="day-title" id="dayTitle" style="display:none"></div>
 
     <div class="card-area fade-up" style="animation-delay:.1s">
@@ -306,7 +300,9 @@ function enterStudy(index) {
   currentDayIndex = index;
   document.getElementById('daySelectScreen').style.display = 'none';
   document.getElementById('studyScreen').style.display = 'block';
-  document.getElementById('studyDayLabel').textContent = `Day ${dayData[index].day}`;
+  document.getElementById('btnBack').style.display = 'block';
+  const dayNum = String(dayData[index].day).padStart(2, '0');
+  document.getElementById('headerDayLabel').textContent = ` : Day ${dayNum}`;
   updateDayTitle();
   startStudy();
 }
@@ -314,6 +310,8 @@ function enterStudy(index) {
 // 돌아가기
 function goBackToSelect() {
   window.speechSynthesis.cancel();
+  document.getElementById('btnBack').style.display = 'none';
+  document.getElementById('headerDayLabel').textContent = '';
   showDaySelectScreen();
 }
 
@@ -361,9 +359,7 @@ function showCard() {
   else { btnStar.textContent = '☆'; btnStar.classList.remove('starred'); }
   let html = '';
   word.meanings.forEach(m => {
-    html += `<div class="meaning-group"><span class="pos-tag">${m.pos}</span><ul class="def-list">`;
-    m.defs.forEach(d => { html += `<li>${d}</li>`; });
-    html += `</ul></div>`;
+    html += `<div class="meaning-group"><span class="pos-tag">${m.pos}</span> <span class="def-inline">${m.defs.join(', ')}</span></div>`;
   });
   document.getElementById('cardMeanings').innerHTML = html;
   document.getElementById('cardCounter').textContent = `${currentIndex + 1} / ${studyWords.length}`;
