옵션_전체화면
ios에서는 안된다는 문구추가

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ body.fullscreen-mode{overscroll-behavior-y:contain}
       </select>
     </div>
     <button class="btn-reload" onclick="toggleFullscreen()" id="btnFullscreen">🖥️ 전체화면 모드</button>
+    <div style="font-size:.7rem;color:var(--text-dim);text-align:center;margin-top:4px">※ iOS(아이폰/아이패드)에서는 지원되지 않습니다</div>
     <button class="btn-reload" onclick="reloadDays()">🔄 Day 파일 다시 불러오기</button>
     <button class="btn-close-settings" onclick="toggleSettings()">닫기</button>
   </div>
